ASC Prod BAckup/ASC Prod/force-app/main/default/objects/QuoteLineItem/fields/Catalog_Number__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Number__c</fullName>
    <label>Catalog Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>