ASC Prod BAckup/ASC Prod/force-app/main/default/objects/QuoteLineItem/fields/Chemical_Structure_SMILES_Code__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Structure_SMILES_Code__c</fullName>
    <label>Chemical Structure (SMILES Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>