ASC Prod BAckup/ASC Prod/force-app/main/default/objects/QuoteLineItem/fields/CommentPurity__c.field-meta.xml
<CustomField>
    <fullName>CommentPurity__c</fullName>
    <label>CommentPurity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>