ASC Prod BAckup/ASC Prod/force-app/main/default/objects/QuoteLineItem/fields/Demand_Type__c.field-meta.xml
<CustomField>
    <fullName>Demand_Type__c</fullName>
    <label>Demand Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-time need</fullName>
            </value>
            <value>
                <fullName>Ongoing supply</fullName>
            </value>
            <value>
                <fullName>Secondary source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>