ASC Prod BAckup/ASC Prod/force-app/main/default/objects/QuoteLineItem/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reagent</fullName>
            </value>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>USP</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>