ASC Prod BAckup/ASC Prod/force-app/main/default/objects/QuoteLineItem/fields/Molecular_Formula__c.field-meta.xml
<CustomField>
    <fullName>Molecular_Formula__c</fullName>
    <label>Molecular Formula</label>
    <length>80</length>
    <type>Text</type>
</CustomField>