ASC Prod BAckup/ASC Prod/force-app/main/default/objects/QuoteLineItem/fields/Molecular_Weight__c.field-meta.xml
<CustomField>
    <fullName>Molecular_Weight__c</fullName>
    <label>Molecular Weight</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>