ASC Prod BAckup/ASC Prod/force-app/main/default/objects/QuoteLineItem/fields/Technical_Publication_Reference__c.field-meta.xml
<CustomField>
    <fullName>Technical_Publication_Reference__c</fullName>
    <label>Technical Publication Reference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>