ASC Prod BAckup/ASC Prod/force-app/main/default/objects/QuoteLineItem/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>gram</fullName>
            </value>
            <value>
                <fullName>kilogram</fullName>
            </value>
            <value>
                <fullName>active Kg</fullName>
            </value>
            <value>
                <fullName>metric ton</fullName>
            </value>
            <value>
                <fullName>pound</fullName>
            </value>
            <value>
                <fullName>liter</fullName>
            </value>
            <value>
                <fullName>gallon</fullName>
            </value>
            <value>
                <fullName>meter</fullName>
            </value>
            <value>
                <fullName>foot</fullName>
            </value>
            <value>
                <fullName>square centimeter</fullName>
            </value>
            <value>
                <fullName>kit</fullName>
            </value>
            <value>
                <fullName>mole</fullName>
            </value>
            <value>
                <fullName>piece</fullName>
            </value>
            <value>
                <fullName>rod</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>